# LoP03

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/skills/crystal-dungeons/: SKILL.md
.localDocs/: Notes on new updates.txt
assets/: .gitkeep  credits.md  manifest.json
assets/fonts/: font_main.fnt  font_small.fnt  font_title.fnt
cmake/: CompilerWarnings.cmake  Dependencies.cmake
data/: .gitkeep  bosses.json  classes.json  composition.json  dungeon_themes.json  enemies.json  items.json  passives.json  skills.json  story.json
docs/: art_bible.md  asset_pipeline.md  completion_roadmap.md  control_standard.md  game_design.md  manual_test_matrix.md  milestone_completion_template.md  milestones.md  playtest_protocol.md  presentation_audit.md  release_hardening_manual_checklist.md  technical_design.md  ui_style_guide.md
docs/milestone_notes/: M11_completion_baseline.md  M12_ui_text_safety.md  M13_input_settings.md  M14_asset_pipeline.md  M15_art_direction_vertical_slice.md  M16_compact_dungeon_rooms.md  M17_exploration_presentation.md  M18_battle_presentation.md  M19_progression_economy_scoring.md  M20_content_variety.md  M21_audio_music.md  M22_onboarding_accessibility.md  M23_validation_playtesting_balance.md  M24_release_packaging.md  M25_ui_corrections_battle_hud.md  M26_enemy_visual_identity.md  M27_environment_ambience.md  M28_enmity_ai.md  M29_content_learnsets.md  M30_economy_rest.md  M31_equip_shop_categories.md  M32_town_ladder.md  M33_stakes_penalty.md  M34_black_market.md  M35_status_battle_rules_v2.md  M36_passives.md  M37_per_town_equipment.md  M38_per_town_enemies.md  M39_boss_drops.md  M40_castle_king.md  M41_story_lore.md  M42_enrichment.md  M43_balance_audit_fixes.md  M44_royal_relics_king.md  M45_kings_classes.md  M46_presentation_facelift.md  M47_rules_flow_pass.md  M48_elements.md  M49_kings_court.md  M50_town_travel.md  (+8 more)
packaging/: CrystalDungeons.rc.in  LICENSES.txt  README-player.txt  Version.hpp.in
src/: main.cpp
src/assets/: AssetManifest.cpp  AssetManifest.hpp
src/audio/: AudioManager.cpp  AudioManager.hpp  AudioRoles.hpp
src/battle/: Battle.cpp  Battle.hpp  Simulator.cpp  Simulator.hpp
src/capture/: CaptureRunner.cpp  CaptureRunner.hpp
src/content/: ContentDatabase.cpp  ContentDatabase.hpp  ContentLoader.cpp  ContentLoader.hpp  Definitions.hpp  Enums.cpp  Enums.hpp  JsonValidation.cpp  JsonValidation.hpp  LoadReport.cpp  LoadReport.hpp  Stats.hpp
src/core/: AppContext.hpp  Application.cpp  Application.hpp  DebugCheats.hpp  FadeController.hpp  GameConfig.hpp  Geometry.hpp  Log.cpp  Log.hpp
src/danger/: DangerRating.cpp  DangerRating.hpp
src/dungeon/: DungeonGenerator.cpp  DungeonGenerator.hpp  DungeonModel.cpp  DungeonModel.hpp  Rng.hpp  RoomLayout.cpp  RoomLayout.hpp  ThemeEvents.cpp  ThemeEvents.hpp
src/game/: Achievements.cpp  Achievements.hpp  BlackMarket.hpp  BossDrops.cpp  BossDrops.hpp  Castle.cpp  Castle.hpp  Character.hpp  Inventory.cpp  Inventory.hpp  Party.cpp  Party.hpp  Profile.cpp  Profile.hpp  Relics.hpp  RunStats.hpp  StakesLadder.hpp  Story.hpp  WorldLadder.hpp
src/input/: Input.cpp  Input.hpp  InputAction.hpp  InputMap.cpp  InputMap.hpp  PromptLabels.cpp  PromptLabels.hpp  RaylibInputQuery.cpp  Remap.cpp  Remap.hpp
src/platform/: AtomicFile.cpp  AtomicFile.hpp  FatalDialog.cpp  FatalDialog.hpp  Paths.cpp  Paths.hpp
src/render/: Animation.hpp  BattleBackdrop.cpp  BattleBackdrop.hpp  BattleSequencer.cpp  BattleSequencer.hpp  CrtShaderSource.hpp  RaylibRAII.hpp  SpriteDraw.cpp  SpriteDraw.hpp  Viewport.cpp  Viewport.hpp  VirtualScreen.cpp  VirtualScreen.hpp
src/resource/: ResourceManager.cpp  ResourceManager.hpp
src/save/: SaveSystem.cpp  SaveSystem.hpp
src/score/: ScoreEntry.hpp  Scoreboard.cpp  Scoreboard.hpp  Scoring.cpp  Scoring.hpp
src/settings/: Settings.cpp  Settings.hpp
src/states/: AchievementToast.cpp  AchievementToast.hpp  AchievementsState.cpp  AchievementsState.hpp  AoeTint.hpp  ArmoryGhostState.cpp  ArmoryGhostState.hpp  BattleLog.hpp  BattleLogState.cpp  BattleLogState.hpp  BattleState.cpp  BattleState.hpp  BestiaryState.cpp  BestiaryState.hpp  BestiaryStats.hpp  BlackMarketState.cpp  BlackMarketState.hpp  BossIntroState.cpp  BossIntroState.hpp  BossIntroTimeline.hpp  CastleChallengeState.cpp  CastleChallengeState.hpp  CastleState.cpp  CastleState.hpp  ConfirmPromptState.cpp  ConfirmPromptState.hpp  DebugMenuState.cpp  DebugMenuState.hpp  DetailsOverlayState.cpp  DetailsOverlayState.hpp  DungeonMenuState.cpp  DungeonMenuState.hpp  DungeonResultState.cpp  DungeonResultState.hpp  DungeonState.cpp  DungeonState.hpp  ElementChip.hpp  EncounterPreviewState.cpp  EncounterPreviewState.hpp  EquipDiff.hpp  (+48 more)
src/town/: Movement.cpp  Movement.hpp  Tilemap.cpp  Tilemap.hpp  TownData.cpp  TownData.hpp
src/tutorial/: Tutorial.cpp  Tutorial.hpp
src/ui/: Menu.cpp  Menu.hpp  ScrollWindow.hpp  TextInput.cpp  TextInput.hpp  TextLayout.cpp  TextLayout.hpp  UiDraw.cpp  UiDraw.hpp  UiStyle.cpp  UiStyle.hpp
tests/: CMakeLists.txt  test_accessibility.cpp  test_achievements.cpp  test_animation.cpp  test_asset_manifest.cpp  test_atomic_file.cpp  test_audio.cpp  test_balance.cpp  test_battle.cpp  test_battle_backdrop.cpp  test_battle_rules_v4.cpp  test_battle_sequencer.cpp  test_black_market.cpp  test_boss_drops.cpp  test_boss_intro.cpp  test_boss_mechanics.cpp  test_castle.cpp  test_comforts.cpp  test_composition.cpp  test_content_loader.cpp  test_content_validation.cpp  test_danger.cpp  test_dungeon.cpp  test_economy.cpp  test_elements.cpp  test_enmity.cpp  test_equip_shop_filter.cpp  test_equipment.cpp  test_events.cpp  test_fade.cpp  test_fatal_dialog.cpp  test_input_frame.cpp  test_input_map.cpp  test_inventory.cpp  test_kings_classes.cpp  test_kings_court.cpp  test_learnset.cpp  test_leveling.cpp  test_menu.cpp  test_party.cpp  (+28 more)
tools/: package.ps1
tools/asset_gen/: generate_audio.ps1  generate_font.ps1  generate_icon.ps1  generate_textures.ps1
